--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
+    margin: 0;
     font-family: 'Redressed', cursive;
 }
 .half-width {
     width: 40%;
     float: left;
     margin-left: 5%;
-    page-break-after: 2%;
+    padding-left: 2%;
 }
 .half-width img {
     width: 100%;
@@ -13,6 +14,34 @@ body {
 h1 {
     font-size: 60px;
 }
+h2 {
+    font-size: 40px;
+}
+p {
+    color: dimgray;
+}
 .orange {
     color: orange;
+}
+.top-banner {
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section {
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button {
+    text-decoration: none;
+    background-color: orange;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area {
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
